// This source file is part of the Swift.org open source project
//
// Copyright (c) 2020 Apple Inc. and the Swift project authors
// Licensed under Apache License v2.0 with Runtime Library Exception
//
// See http://swift.org/LICENSE.txt for license information
// See http://swift.org/CONTRIBUTORS.txt for the list of Swift project authors

syntax = "proto3";

option java_package = "com.apple.llbuild2.buildsystem.evaluation";

import "CASProtocol/data_id.proto";

// An ArtifactValue contains a reference to the actual bytes that is expected to exist in a CAS database.
message LLBArtifactValue {

    // The dataID with a reference to the contents of the artifact.
    LLBDataID dataID = 1;

    // Optional dataID for the logs (e.g. stdout) of the action that generated this artifact value.
    LLBDataID logsID = 2;
}
